--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(21, 11, 45);"></div>
 
@@ -265,7 +265,7 @@
                 <ul><p><br></p><li><a class="text-white" href="#">К</a>омпания</li><li><a class="text-white" href="#">Н</a>аш опыт</li><li><a class="text-white" href="#">У</a>слуги</li><br><p></p></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
-                <p><strong>Contacts</strong><br><br><br>Тел./факс: +7(727)274-73-98, <br>274-71-95,<br><br>Моб.: +7(701)714-19-29,<br>+7(777)002-00-49<br><br>Эл. почта: ccckz@mail.ru<br><br><br><strong>Address</strong><br>050057, Республика Казахстан,               г. Алматы, ул. М. Озтюрка, д.11а<br></p>
+                <p><strong>Contacts</strong><br><br><br>Тel./Fax: +7(727)274-73-98, <br>274-71-95,<br><br>Mob.: +7(701)714-19-29,<br>+7(777)002-00-49<br><br>E-mail: ccckz@mail.ru<br><br><br><strong>Address</strong><br>050057, Республика Казахстан,               г. Алматы, ул. М. Озтюрка, д.11а<br></p>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3" data-form-type="formoid">
 
@@ -275,7 +275,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="sdnlaTlqqQrun44CtAZdzmAPH+JeuQ+IbwStodudLZeY60/jEUzq6+lmck6fUukhVDYm+rZWS30iWqMQaCcpefBKvViB6qD8vKSUiGqFdtFKKH6HWv/fJUOR3lADftC7" data-form-email="true">
+                    <input type="hidden" value="6nbq4BPgAGFpUyzdujEf36PBizOEGOUUgrQ1NJ8zoVW9Rh4ZibM92aTBD+fZvouzPdUzkJKAjiKpyAyzZA6dhBs18/HgWjR93Mp9el2Yc1lOkhcmi1ZIsYPiJ9J6qmjm" data-form-email="true">
 
                     
 
