--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">главная</a></li><li class="nav-item"><a class="nav-link link" href="company.html" aria-expanded="false">компания</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Примеры работ</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">главная</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="company.html" aria-expanded="false" data-toggle="dropdown-submenu">компания</a><div class="dropdown-menu"><a class="dropdown-item" href="company.html">О компании</a><a class="dropdown-item" href="lic.html">Лицензии</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Референс лист Барс Инжиниринг</a><a class="dropdown-item" href="#">Референс лист CCS</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(21, 11, 45);"></div>
 
@@ -275,7 +275,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="6nbq4BPgAGFpUyzdujEf36PBizOEGOUUgrQ1NJ8zoVW9Rh4ZibM92aTBD+fZvouzPdUzkJKAjiKpyAyzZA6dhBs18/HgWjR93Mp9el2Yc1lOkhcmi1ZIsYPiJ9J6qmjm" data-form-email="true">
+                    <input type="hidden" value="f18VBLTuUWqOn4n+tMAffRYHLJUqA8G7i9BVMP8+O7psaSz5lG522t82AhJ/aKHVtCpGZAvviw77rd7fzHU7MkvbwFwcLLcpO2qq8TMSYmi8U2aD7DdQh3Z69oRyS3GA" data-form-email="true">
 
                     
 
