create github pages

--- a/Alcapone.html
+++ b/Alcapone.html
@@ -37,7 +37,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">О БАРЕ</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">Al Capone</a></li><li class="nav-item"><a class="nav-link link" href="https://kachina.com/">МЕНЮ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">О БАРЕ</a></li><li class="nav-item"><a class="nav-link link" href="Alcapone.html">Al Capone</a></li><li class="nav-item"><a class="nav-link link" href="http://barseng.kz/menu.pdf" target="_blank">МЕНЮ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(184, 49, 47);"></div>
 
