create github pages

--- a/Alcapone.html
+++ b/Alcapone.html
@@ -37,7 +37,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">О БАРЕ</a></li><li class="nav-item"><a class="nav-link link" href="Alcapone.html">Al Capone</a></li><li class="nav-item"><a class="nav-link link" href="http://barseng.kz/menu.pdf" target="_blank">МЕНЮ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">О БАРЕ</a></li><li class="nav-item"><a class="nav-link link" href="Alcapone.html">Al Capone</a></li><li class="nav-item"><a class="nav-link link" href="http://barseng.kz/menu.pdf" target="_blank">МЕНЮ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -50,9 +50,9 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
 
-    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(184, 49, 47);"></div>
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(43, 6, 128);"></div>
 
     <div class="mbr-table-cell">
 
@@ -111,33 +111,7 @@
         </div>
     </div>
 
-    <div class="mbr-arrow mbr-arrow-floating" aria-hidden="true"><a href="#content1-7"><i class="mbr-arrow-icon"></i></a></div>
-
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-7" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>И бар и кухня сочетают в себе американскую классику с итальянским колоритом под стать названию: виски и вермуты, пицца и бургеры. Меню в « KACHNA Al Capone» авторское и, как настоящий гангстер, хранит очень много секретов, некоторыми из которых могут поделиться с гостями. Например, необычный чесночный круассан готовится из специального сырного теста, а чтобы разгадать тайну одноименной «живой» пиццы с морепродуктами – ее надо попробовать. Кроме того, здесь есть пицца «Lego», которую можно «собрать» на свой вкус из понравившихся ингредиентов, топингов, сыров и соусов на классическом итальянском или слоеном тесте с моцареллой.</p><p><br></p><p>Оригинальная авторская коктейльная карта заслуживает особого внимания. Например, фирменный коктейль «Манхеттен» воспроизведен по подлинному рецепту той эпохи: ржаной виски, красный вермут и ангостура. Кстати, у него есть и «спутница» – оригинальный коктейль Мей Капоне (ром, руби порто, желток, лимон, мед, биттер), названный в честь супруги культового персонажа. Название каждой позиции выбрано не случайно: в карте можно найти «Синдикат», «Картель» и даже «От КГБ с любовью». Разумеется, в баре представлены и классические коктейли, большой выбор крепких напитков и ликеров, а также особая позиция «Озадачить бармена». Для ценителей пива – несколько сортов разливного, в том числе редкий миндальный эль.</p><p><br></p></div>
-        </div>
-    </div>
-
-</section>
-
-<section class="mbr-section article" id="msg-box8-a" data-bg-video="https://www.youtube.com/embed/Tyuw-gnEGxI?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">&nbsp;Коктели</h3>
-                <div class="lead"></div>
-                
-            </div>
-        </div>
-    </div>
+    <div class="mbr-arrow mbr-arrow-floating" aria-hidden="true"><a href="#content1-b"><i class="mbr-arrow-icon"></i></a></div>
 
 </section>
 
