--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">О БАРЕ</a></li><li class="nav-item"><a class="nav-link link" href="Alcapone.html">Al Capone</a></li><li class="nav-item"><a class="nav-link link" href="http://barseng.kz/menu.pdf" target="_blank">МЕНЮ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">О БАРЕ</a></li><li class="nav-item"><a class="nav-link link" href="Alcapone.html">Al Capone</a></li><li class="nav-item"><a class="nav-link link" href="http://barseng.kz/menu.pdf" target="_blank">МЕНЮ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
 
     
 
@@ -370,7 +370,7 @@ Email: support@capone.com<br>
 Phone: +1 (0) 000 0000 001<br>
 Fax: +1 (0) 000 0000 002</p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Страницы</strong></p><ul><font color="#bcbcbc"><span style="font-size: 14px; line-height: 25px;"><a href="index.html">О Баре</a></span></font><br><span style="font-size: 14px; line-height: 25px;"><a href="Alcapone.html">Al Capone</a></span><br><span style="font-size: 14px; line-height: 25px;">Меню</span></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Страницы</strong></p><ul><font color="#bcbcbc"><span style="font-size: 14px; line-height: 25px;"><a href="index.html">О Баре</a></span></font><br><span style="font-size: 14px; line-height: 25px;"><a href="Alcapone.html">Al Capone</a></span><br><span style="font-size: 14px; line-height: 25px;"><a href="http://barseng.kz/menu.pdf">Меню</a></span></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJwS_1cDxpgzgR_ownrv0zpVY" allowfullscreen=""></iframe></div>
             </div>
