--- a/Alcapone.html
+++ b/Alcapone.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);"></div>
 
@@ -125,7 +125,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="content5-t" style="background-image: url(assets/images/val-2000x852.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="content5-t" style="background-image: url(assets/images/val-2000x852.jpg); padding-top: 200px; padding-bottom: 200px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -137,7 +137,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-s" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 100px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
