--- a/Alcapone.html
+++ b/Alcapone.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <span class="navbar-logo"><img src="assets/images/kapone-170x128.jpg" alt="Mobirise"></span>
-                        <a class="navbar-caption" href="https://mobirise.com">LOUNGE BAR</a>
+                        <a class="navbar-caption" href="https://mobirise.com">Loung Bar</a>
                     </div>
 
                 </div>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);"></div>
 
@@ -155,8 +155,8 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer2 mbr-parallax-background" id="contacts2-p" style="background-image: url(assets/images/pub3-2000x1124.jpg); padding-top: 90px; padding-bottom: 90px;">
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
+<section class="mbr-section mbr-section-md-padding mbr-footer footer2 mbr-parallax-background" id="contacts2-p" style="background-image: url(assets/images/pub3-2000x1124.jpg); padding-top: 120px; padding-bottom: 90px;">
+    <div class="mbr-overlay" style="opacity: 0; background-color: rgb(0, 0, 0);"></div>
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
