--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);"></div>
 
@@ -366,7 +366,7 @@
 </section>
 
 <section class="mbr-section mbr-section-md-padding mbr-footer footer2 mbr-parallax-background" id="contacts2-p" style="background-image: url(assets/images/pub3-2000x1124.jpg); padding-top: 120px; padding-bottom: 90px;">
-    <div class="mbr-overlay" style="opacity: 0; background-color: rgb(0, 0, 0);"></div>
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);"></div>
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
