--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);"></div>
 
@@ -201,7 +201,7 @@
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
                     
-                    <p class="mbr-section-lead lead">Для постоянных гостей действует программа лояльности, потому что здесь ценят каждого ганстера.<br></p>
+                    <p class="mbr-section-lead lead">Для постоянных гостей действует программа лояльности.<br></p>
                     
                 </div>
             </div>
