create github pages

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <div class="navbar-brand">
                         <span class="navbar-logo"><img src="assets/images/kapone-170x128.jpg" alt="Mobirise"></span>
-                        <a class="navbar-caption" href="https://mobirise.com">Loung Bar</a>
+                        <a class="navbar-caption" href="Alcapone.html">Loung Bar</a>
                     </div>
 
                 </div>
