--- a/Alcapone.html
+++ b/Alcapone.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <span class="navbar-logo"><img src="assets/images/kapone-170x128.jpg" alt="Mobirise"></span>
-                        <a class="navbar-caption" href="https://mobirise.com">Loung Bar</a>
+                        <a class="navbar-caption" href="Alcapone.html">Loung Bar</a>
                     </div>
 
                 </div>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/pub5-2000x707.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);"></div>
 
