--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);"></div>
 
@@ -365,7 +365,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-u" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 100px;">
+<section class="mbr-section mbr-section__container article" id="header3-v" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 100px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
