--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-h" style="background-image: url(assets/images/pub2-2000x1250.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);"></div>
 
@@ -91,7 +91,7 @@
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features1-l" style="background-image: url(assets/images/img-20170319-172205-2000x2000.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-l" style="background-color: rgb(218, 8, 0);">
 
         
 
